--- a/html/matchlist.html
+++ b/html/matchlist.html
@@ -74,7 +74,7 @@
                                                     <td>
                                                         <v-tooltip bottom v-for="(map, idx) in match.maps" :key="idx">
                                                             <template v-slot:activator="{ on, attrs }">
-                                                                <v-chip v-bind="attrs" v-on="on" :color="getMapColor(map.map)">
+                                                                <v-chip v-bind="attrs" v-on="on" :color="getMapColor(map.map)" @click="copySpin(map.spin)">
                                                                     {{ map.map }}
                                                                 </v-chip>
                                                             </template>
@@ -269,6 +269,15 @@
                             result.push(targetString);
                         }
                         return result;
+                    },
+                    copySpin(spin) {
+                        const input = document.createElement("textarea");
+                        input.style.opacity = 0;
+                        document.body.appendChild(input);
+                        input.value = this.spinToText(spin).join("\n");
+                        input.select();
+                        document.execCommand('copy');
+                        input.remove();
                     }
                 }
             })
