--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -96,7 +96,7 @@
                                     <template v-slot:item.maps="{ item }">
                                         <v-tooltip bottom v-for="(map, index) in item.maps" :key="index">
                                             <template v-slot:activator="{ on, attrs }">
-                                              <v-chip :key="index" v-bind="attrs" v-on="on" :color="getMapColor(item, map)">
+                                              <v-chip :key="index" v-bind="attrs" v-on="on" :color="getMapColor(item, map)"  @click="copySpin(map.spin)">
                                                     {{ map.map }}
                                                 </v-chip>
                                             </template>
@@ -481,6 +481,15 @@
                             result.push(targetString);
                         }
                         return result;
+                    },
+                    copySpin(spin) {
+                        const input = document.createElement("textarea");
+                        input.style.opacity = 0;
+                        document.body.appendChild(input);
+                        input.value = this.spinToText(spin).join("\n");
+                        input.select();
+                        document.execCommand('copy');
+                        input.remove();
                     }
                 },
                 async created() {
